fixing margin problem when modality open[UI: Modality window not visible when longer as browser window #285]

--- a/dcm4chee-arc-ui/src/main/webapp/scss/style.scss
+++ b/dcm4chee-arc-ui/src/main/webapp/scss/style.scss
@@ -715,6 +715,9 @@ table{
 	&.extended {
 	    margin-top: 319px;
 	}
+	&.modality{
+		margin-top:0;
+	}
 	.arrows{
 		width: 100%;
 		float: left;
